--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_height="300dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        app:cellColor="#000000"
-        app:textColor="#ff0000"
+        app:cellColor="#DFDEDE"
+        app:textColor="#000000"
         app:pressedTextColor="#FFFFFF"
         app:pressedCellColor="#000000"
         app:textStyle="bold"
